--- a/index.html
+++ b/index.html
@@ -25,30 +25,30 @@
 	<div class="todo-container">
 
 		<ul class="todo todo-list" id="todo">
-			<li class="todo-item">
+			<!-- <li class="todo-item">
 				<span class="text-todo">Купить МиниКупер</span>
 				<div class="todo-buttons">
 					<button class="todo-remove"></button>
 					<button class="todo-complete"></button>
 				</div>
-			</li>
+			</li> -->
 			<li class="todo-item">
-				<span class="text-todo">Выполнить усложненное задание</span>
+				<!-- <span class="text-todo">Выполнить усложненное задание</span>
 				<div class="todo-buttons">
 					<button class="todo-edit"></button>
 					<button class="todo-remove"></button>
 					<button class="todo-complete"></button>
-				</div>
+				</div> -->
 			</li>
 		</ul>
 
 		<ul class="todo todo-completed" id="completed">
 			<li class="todo-item">
-				<span class="text-todo">Продать Мазду</span>
+				<!-- <span class="text-todo">Продать Мазду</span>
 				<div class="todo-buttons">
 					<button class="todo-remove"></button>
 					<button class="todo-complete"></button>
-				</div>
+				</div> -->
 			</li>
 		</ul>
 	</div>
